--- a/plenaries/data.html
+++ b/plenaries/data.html
@@ -1,153 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="The World Affairs Conference">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="The World Affairs Conference">
 
-  <title>Data Daycare | The World Affairs Conference</title>
-  <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
+    <title>Data Daycare | The World Affairs Conference</title>
+    <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
 
-  <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
-  <link rel="stylesheet" href= "../css/bootstrap.min.css">
-  <link rel="stylesheet" href= "../css/style.css">
-  <script src="../js/google_analytics.js"></script>
-  <script defer src="../js/fontawesome-all.min.js"></script>
-  <style>
-		body{
-			background-image:url("../img/earth.png"),url("../img/stars.png");
-			background-repeat:no-repeat;
-		}
-	</style>
+    <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <link rel="stylesheet" href= "../css/bootstrap.min.css">
+    <link rel="stylesheet" href= "../css/style.css">
+    <script src="../js/google_analytics.js"></script>
+    <script defer src="../js/fontawesome-all.min.js"></script>
+    <style>
+        body{
+            background-image:url("../img/earth.png"),url("../img/stars.png");
+            background-repeat:no-repeat;
+        }
+    </style>
 </head>
 
-	
-	
 
-	<body>
 
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="nav navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="../keynote/index.html">Keynote</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../addresses/index.html">Addresses</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../faq/index.html">FAQ</a>
-      </li>
-      <!--<li class="nav-item">
-        <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>-->
-      <li class="nav-item">
-        <a class="nav-link" href="../schedule/index.html">Schedule</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../contact/index.html">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="../book/index.html">Reading List</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav float-lg-right">
-      <li class="nav-item">
-        <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
-      </li>
-    </ul>
-  </div>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <a class="navbar-brand" href="../index.html"><img class="nav-image" src="../img/wac_logo_full.png" alt="WAC Logo"/></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="../keynote/index.html">Keynote</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../addresses/index.html">Addresses</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../plenaries/index.html">Plenaries</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../faq/index.html">FAQ</a>
+            </li>
+            <!--<li class="nav-item">
+              <a class="nav-link" href="../staff/index.html">Staff</a>
+            </li>-->
+            <li class="nav-item">
+                <a class="nav-link" href="../schedule/index.html">Schedule</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../contact/index.html">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../book/index.html">Reading List</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav float-lg-right">
+            <li class="nav-item">
+                <a class="btn btn-outline-primary" href="https://worldaffairsconference.github.io/reg/#/" data-proofer-ignore>Register</a>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 
-		<div class="container">
-			<div class="text-center">
-				<div class="card">
-					<div class="card-body">
-						<h1>Data Datcare</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/dataf.png" alt="Data Daycare"/>
-						<p class="card-text">
-							<p>We are currently living in the “age of data”, where everything that surrounds us is linked to a data source and everything in our lives is captured digitally. The physical world around us has turned into raw information: internet, video, call data records, customer transactions, healthcare records, etc. 
+<div class="container">
+    <div class="text-center">
+        <div class="card">
+            <div class="card-body">
+                <h1>Data Datcare</h1>
+                <img class="img-fluid plenary-img" src="../img/plen/dataf.png" alt="Data Daycare"/>
+                <p class="card-text">
+                <p>We are currently living in the “age of data”, where everything that surrounds us is linked to a data source and everything in our lives is captured digitally. The physical world around us has turned into raw information: internet, video, call data records, customer transactions, healthcare records, etc.
 
-              We like to call it big data—and it is indeed getting bigger, growing exponentially with each passing day. Luckily, the opportunities to take this data and combine it with analytics to improve all aspects of our lives are also growing exponentially.
+                    We like to call it big data—and it is indeed getting bigger, growing exponentially with each passing day. Luckily, the opportunities to take this data and combine it with analytics to improve all aspects of our lives are also growing exponentially.
 
-              The increasing prevalence of big data, however, draws questions and controversy about the safety of our own personal data, with tremendous potential to be exploited with wide-ranging consequences.
-            </p>
+                    The increasing prevalence of big data, however, draws questions and controversy about the safety of our own personal data, with tremendous potential to be exploited with wide-ranging consequences.
+                </p>
 
-          <p>But there are some questions we must ask, too. How is automation impacting various sectors of the economy, from those where jobs are being destroyed to those where jobs are being created. How can society handle such a shift? Do we have the right public policy imperatives, and the right social infrastructure, to handle such shifts? What is the right ethical framework to make decisions about the deployment of automation/AI?
-          Our plenary prepares our generation - the first generation that will be fully immersed in this technology - for what we need to know to be prepared for the exponential increase of cryptocurrencies in the years to come.</p>
+                <p>But there are some questions we must ask, too. How is automation impacting various sectors of the economy, from those where jobs are being destroyed to those where jobs are being created. How can society handle such a shift? Do we have the right public policy imperatives, and the right social infrastructure, to handle such shifts? What is the right ethical framework to make decisions about the deployment of automation/AI?
+                </p>
 
-						</p>
-						<p class="card-text">
-							More information on plenaries and programs are coming soon.
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="card card-body mt-2">
-				<h1 class="text-center">Speakers</h1>
-				<div class="row pb-2">
-					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/agupta.png" alt="Arvind Gupta">
-					</div>
-					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Arvind Gupta</h2>
-						Arvind Gupta is Professor of Computer Science at the University of Toronto. He has served as President and Vice-Chancellor of UBC, and as the CEO and Scientific Director of Mitacs Inc. Arvind has published extensively on theoretical computer science, computational genomics, and national innovation strategies. 
+                </p>
+                <p class="card-text">
+                    More information on plenaries and programs are coming soon.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="card card-body mt-2">
+        <h1 class="text-center">Speakers</h1>
+        <div class="row pb-2">
+            <div class="col-md-4">
+                <img class="img-fluid mx-auto d-block rounded" src="../img/speakers/agupta.png" alt="Arvind Gupta">
+            </div>
+            <div class="col-md-8">
+                <h2 class="text-center text-md-left">Dr. Arvind Gupta</h2>
+                Arvind Gupta is Professor of Computer Science at the University of Toronto. He has served as President and Vice-Chancellor of UBC, and as the CEO and Scientific Director of Mitacs Inc. Arvind has published extensively on theoretical computer science, computational genomics, and national innovation strategies.
 
-            Arvind has a record of accomplishment for initiatives that improve Canada’s productivity and competitiveness by successfully enhancing workforce skills through industry-academic partnerships. As the founder of Mitacs, he achieved success in interweaving graduate education with socioeconomic needs by bringing together 60 universities with more than 1,000 civil society partners. Most recently he co-founded Palette Skills Inc, a Federal not-for-profit dedicated to creating transition pathways to the knowledge economy for mid-career professionals whose careers are adversely being impacted by automation. 
+                Arvind has a record of accomplishment for initiatives that improve Canada’s productivity and competitiveness by successfully enhancing workforce skills through industry-academic partnerships. As the founder of Mitacs, he achieved success in interweaving graduate education with socioeconomic needs by bringing together 60 universities with more than 1,000 civil society partners. Most recently he co-founded Palette Skills Inc, a Federal not-for-profit dedicated to creating transition pathways to the knowledge economy for mid-career professionals whose careers are adversely being impacted by automation.
 
-            Arvind was instrumental in creating the Pacific Institute for the Mathematical Sciences (PIMS) and the Banff International Research Station (BIRS). He is a Senior Fellow of the Brookfield Institute and serves on the Boards of the India-Canada Research Centre of Excellence (IC-IMPACTS), BIRS, the Fields Institute, the Canadian Statistical Sciences Institute, and SimTrec.
+                Arvind was instrumental in creating the Pacific Institute for the Mathematical Sciences (PIMS) and the Banff International Research Station (BIRS). He is a Senior Fellow of the Brookfield Institute and serves on the Boards of the India-Canada Research Centre of Excellence (IC-IMPACTS), BIRS, the Fields Institute, the Canadian Statistical Sciences Institute, and SimTrec.
 
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/fkerschbaum.png" alt="Florian Kerschbaum">
-					</div>
-					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Dr. Florian Kerschbaum</h2>
-						Florian Kerschbaum is an associate professor in the David R. Cheriton School of Computer Science at the University of Waterloo and executive director of the Waterloo Cybersecurity and Privacy Institute.  Before he worked as chief research expert at SAP in Karlsruhe, Germany and as a software architect at Arxan Technologies in San Francisco.  He holds a Ph.D. in computer science from the Karlsruhe Institute of Technology and a master's degree from Purdue University.  His research interests revolve around data security and privacy in machine learning, IoT and blockchains.  He is the inventor of more than 50 patents and one of only three authors worldwide that have two single author papers in the leading computer security conferences in the last ten years.
-					</div>
-				</div>
-			</div>
-			<div class="card card-body text-center mt-2">
-				<p class="card-text">
-					<a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
-				</p>
-			</div>
-		</div>
-		</br>
-		<footer class="footer text-center mt-3">
-  <div class="container">
-    <p>
-      The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
-    </p>
-    <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
-    </p>
-    <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
-    <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
-    <a href="https://instagram.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-instagram white-icon"></span></a>
-    <a href="https://twitter.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-twitter white-icon"></span></a>
-    <a href="https://github.com/worldaffairsconference/world.ac"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
-  </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <img class="img-fluid mx-auto d-block rounded" src="../img/speakers/fkerschbaum.png" alt="Florian Kerschbaum">
+            </div>
+            <div class="col-md-8">
+                <h2 class="text-center text-md-left">Dr. Florian Kerschbaum</h2>
+                Florian Kerschbaum is an associate professor in the David R. Cheriton School of Computer Science at the University of Waterloo and executive director of the Waterloo Cybersecurity and Privacy Institute.  Before he worked as chief research expert at SAP in Karlsruhe, Germany and as a software architect at Arxan Technologies in San Francisco.  He holds a Ph.D. in computer science from the Karlsruhe Institute of Technology and a master's degree from Purdue University.  His research interests revolve around data security and privacy in machine learning, IoT and blockchains.  He is the inventor of more than 50 patents and one of only three authors worldwide that have two single author papers in the leading computer security conferences in the last ten years.
+            </div>
+        </div>
+    </div>
+    <div class="card card-body text-center mt-2">
+        <p class="card-text">
+            <a class="card-link" href="../plenaries/index.html"><span class="fa fa-arrow-left"></span> View the other plenaries.</a>
+        </p>
+    </div>
+</div>
+</br>
+<footer class="footer text-center mt-3">
+    <div class="container">
+        <p>
+            The World Affairs Conference website, made by the <a class="white-icon" style="text-decoration:underline;" href="https://github.com/worldaffairsconference" target="_blank">WAC team</a> with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
+        </p>
+        <p>
+            Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
+        </p>
+        <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
+        <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
+        <a href="https://instagram.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-instagram white-icon"></span></a>
+        <a href="https://twitter.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-twitter white-icon"></span></a>
+        <a href="https://github.com/worldaffairsconference/world.ac"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
+    </div>
 </footer>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../js/tether.min.js></script>
+<script src="../js/tether.min.js>"</script>
 
-	</body>
+</body>
 </html>
