--- a/keynote/index.html
+++ b/keynote/index.html
@@ -79,11 +79,16 @@
       <div class="container">
   <div class="card">
     <div class="card-body">
-      <h1 class="text-center">Dr. James Hansen</h1>
-      <h2 class="text-center">Lionel Gelber Keynote Speaker</h2>
+      <h1 class="text-center">Young People’s World: Making Your Future Energy, Climate & Human Rights</h1>
+        <p class = "text-center">
+            How can we use democracy as a tool for solving climate change? Do we have a responsibility to reflect scientific findings in policy? What power does today’s youth have in shaping the future of our climate? 
+        </p>
+        <hr>
       <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/Jhansenspeak.jpg" alt="Dr. James Hansen"/>
+        
+      <h2 class="text-center">Dr. James Hansen</h2>
       <p>
-        Dr. James Hansen, formerly Director of the NASA Goddard Institute for Space Studies, is Adjunct Professor at Columbia University’s Earth Institute, where he directs a program in Climate Science, Awareness and Solutions. Dr. Hansen is best known for his testimony on climate change in the 1980s that helped raise awareness of global warming. He is a member of the U.S. National Academy of Sciences and has received numerous awards including the Sophie and Blue Planet Prizes. Dr. Hansen is recognized for speaking truth to power and for outlining actions needed to protect the future of young people and all species on the planet.
+        Dr. James Hansen will address these key issues and more in his Keynote Address. We will have the fortune of hearing not only about his extensive experience as an environmental advocate, scientist, and professor, but also the opportunity to engage in an open-discourse on the climate. We request that students come to the address with questions and issues in mind. The address will not merely be a lecture, but a two-way exchange of ideas.
       </p>
     </div>
   </div>
