Just some formatting
got rid of some image refs... sorry billy....

--- a/addresses/index.html
+++ b/addresses/index.html
@@ -79,11 +79,11 @@
     <div class="container">
 	<div class="card card-body mb-5">
 		<h1 class="text-center">Opening Address: The Future Of Migrants In The Western World</h1>
-		<img class="img-fluid d-block mx-auto my-2 img-quater" src="../img/plen/openf.png" alt="opening"/>
-        <p>
+        <p class = "text-center">
 			The early 21st century has seen migration on an unprecedented scale since the second world war. Now, as many migrants begin to find themselves at their destinations, Western Nations find themselves with hundreds thousands of new inhabitants in their lands that they are responsible for. What does the future hold for these newly settled migrants? How will politics be affected by their presence? Should society absorb these new migrants, or should these migrants focus on preserving their own culture?
             
 		</p>
+        <hr>
         <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/ahussen.jpg" alt="Ahmed Hussen"/>
         <h2 class="text-center">Ahmed Hussen</h2>
 		<p>
@@ -96,11 +96,11 @@
     <div class="container">
 	<div class="card card-body mb-5">
 		<h1 class="text-center">Closing Address: Needles in a Russian Haystack </h1>
-        <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/plen/closef.png" alt="closing"/>
-		<p>
+		<p class = "text-center">
 			 The 2020 Tokyo Summer Olympic Games will be heavily scrutinised with regards to its doping control measures following the Russian doping scandals at the 2016 Rio Olympic Games. Many now wonder about the legitimacy of WADA and federal doping agencies around the world. Full of fascinating intricacies, dive into the world of doping control and fair play, as well as the McLaren Report, with Diana Tesic.
 
 		</p>
+        <hr>
         <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/dtesic.jpg" alt="Diana Tesic"/>
         <h2 class="text-center">Diana Tesic</h2>
         <p>
