--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="col-sm-9">
         <h4>What's WAC?</h4>
         <p>
-          The World Affairs Conference (WAC) is Canada's oldest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America.
+          The World Affairs Conference (WAC) is North America's largest annual student-run current affairs conference. Annually held at Upper Canada College in Toronto, Canada, the World Affairs Conference connects over 1000 students, with a common interest in current affairs, from across North America.
         </p>
         <p>
           The theme, 20/20 Vision, aims to address how we might respond to the inevitable change that will accompany the oncoming decade. The 2020s will undoubtedly be fateful years as we attempt to slow climate change, consider the social implications of technology, and even reevaluate the ethics of international sports. As young people, it is our responsibility to engage.
