--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div class="card card-body">
     <h2 class="text-center">Previously From WAC</h2>
     <div class="embed-container">
-      <iframe src="https://www.youtube.com/embed/gVEUOxwLgjE" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/GUycwPz_Kds" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="row pt-5">
       <div class="col-sm-3">
