--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </div>
 <div class="container mt-3">
   <div class="card card-body">
-    <h2 class="text-center">Previously From WAC</h2>
+    <h2 class="text-center">WAC Promotional Video</h2>
     <div class="embed-container">
       <iframe src="https://www.youtube.com/embed/GUycwPz_Kds" frameborder="0" allowfullscreen></iframe>
     </div>
