--- a/plenaries/cleanup.html
+++ b/plenaries/cleanup.html
@@ -101,17 +101,11 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ysheffi.jpg" alt="Yossi Sheffi">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ayetchew.png" alt="Yossi Sheffi">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Yossi Sheffi</h2>
-						Dr. Yossi Sheffi is a professor at the Massachusetts Institute of Technology, where he serves as Director of the MIT Center for Transportation and Logistics. He teaches and specializes in systems optimization, risk analysis, and supply chain management. He has published several scientific publications and five books, one of them Balancing Green: When to Embrace Sustainability in a Business (and When Not To).
-
-                        He founded the MITx MicroMasters in Supply Chain Management and served as the Director of the MIT Engineering Systems Division from 2007-2011.
-
-                        Outside the university, Professor Sheffi is an innovative entrepreneur who founded/co-founded five companies, such as, LogiCorp Inc., e-Chemicals Inc., Syncra Inc. etc.
-
-                        Dr. Sheffi is widely recognized academically. He became an honorary Doctor (Doctor Honoris Causa) of the University of Zaragoza in 2010. He obtained his B.Sc. from the Technion in Israel in 1975, his S.M. from MIT in 1977, and Ph.D. from MIT in 1978. 
+						<h2 class="text-center text-md-left">Adonis Yatchew</h2>
+						Adonis Yatchew’s research focuses on energy and regulatory economics, and econometrics. Since completing his Ph.D. at Harvard University, he has taught at the University of Toronto. He has also held visiting appointments at Trinity College, Cambridge University, the University of Chicago and Australian National University, among others. He the Editor-in-Chief of The Energy Journal. He has advised public and private sector companies on energy, regulatory and other matters for over 25 years and has provided testimony in numerous regulatory and litigation procedures. Adonis Yatchew currently teaches undergraduate and graduate courses in energy, graduate courses in econometrics and ‘Big Ideas’ courses in the School of Environment with colleagues in physics and classics.
 					</div>
 				</div>
 			</div>
