--- a/book/index.html
+++ b/book/index.html
@@ -48,9 +48,9 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <!--<li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
-      </li>-->
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="../schedule/index.html">Schedule</a>
       </li>
