--- a/staff/index.html
+++ b/staff/index.html
@@ -806,7 +806,7 @@
               <img class="img-fluid rounded-circle" src="../img/staff/avatar.jpg" alt="picture of Ambrose Chan"/>
             </div>
             <div class="col-sm-8">
-              <h4 class="card-title">Fazam Haider</h4>
+              <h4 class="card-title">Faizan Haider</h4>
               <h5>Booth Operator</h5>
               
               
