--- a/addresses/index.html
+++ b/addresses/index.html
@@ -84,10 +84,10 @@
             
 		</p>
         <hr>
-        <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/ahussen.jpg" alt="Ahmed Hussen"/>
-        <h2 class="text-center">Ahmed Hussen</h2>
+        <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/szahid.png" alt="Salma Zahid"/>
+        <h2 class="text-center">Salma Zahid</h2>
 		<p>
-			Ahmed Hussen is the Minister of Immigration, Refugees and Citizenship for the Government of Canada, as well as a Member of Parliament for the riding of York South-Weston. Born and raised in Somalia, Hussen immigrated to Canada in 1993 where he settled in Regent Park and quickly gravitated towards public service. Before his entry into politics, Hussen practised Immigration, Criminal, Refugee, and Human Rights Law in Toronto. He was presented with the RBC Top 25 Canadian Immigrant Award, an award that honours the achievements of immigrants who have chosen to make Canada their home. The Toronto Star named him among the 10 individuals who have made significant contributions to Toronto in various fields, including community service, business, sports and science. He has continued his work in public service through his role as Minister of Immigration by creating new policies to help welcome more immigrants and refugees to Canada.
+			Salma Zahid is a Pakistani-Canadian politician who is the Liberal MP for the riding of Scarborough Centre, serving as a member of the standing committee on the status of women and the standing committee of immigration. She holds a Masters in Educational Management and Administration from the University of London’s institute of Education, and has received the Queen Elizabeth II Diamond Jubilee Medal for meritorious community service. In May of 2018, she became the first MP to wear a hijab in the House of Commons. She continues to serve as a strong advocate for the rights of immigrants and minorities in the House of Commons.
 		</p>
 		<div class="pb-5">
 		</div>
