--- a/book/index.html
+++ b/book/index.html
@@ -128,6 +128,17 @@
   published over 10 years ago.</p>
           </div>
         </div>
+          <br>
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/book/rights.jpg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <h4 class="card-title">The Culture Code: The Secrets of Highly Successful Groups - Daniel Coyle</h4>
+            <p class="card-text">- The book references similar topics to “The Plight of Workers’ Rights,”.</p>
+            <p class="card-text">- discusses the importance of organizational behaviour, and how it has two polar opposite impacts - success and profit, or the violation of workers’ rights.</p>
+          </div>
+        </div>
       </div>
 
 
