--- a/addresses/index.html
+++ b/addresses/index.html
@@ -48,7 +48,7 @@
       <li class="nav-item">
         <a class="nav-link" href="../faq/index.html">FAQ</a>
       </li>
-      <<li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       <li class="nav-item">
@@ -80,15 +80,29 @@
 	<div class="card card-body mb-5">
 		<h1 class="text-center">Opening Address: The Future Of Migrants In The Western World</h1>
         <p class = "text-center">
-			The early 21st century has seen migration on an unprecedented scale since the second world war. Now, as many migrants begin to find themselves at their destinations, Western Nations find themselves with hundreds thousands of new inhabitants in their lands that they are responsible for. What does the future hold for these newly settled migrants? How will politics be affected by their presence? Should society absorb these new migrants, or should these migrants focus on preserving their own culture?
+			Over the past 20 years, war, persecution, and conflict have displaced over 25 million people internationally; from Syria to Sudan. To try to deal with this international refugee crisis, Western nations, with others, have tried to take refugees into their nations to provide them with asylum and a new life. Now, as many migrants begin to find themselves at their destinations, Western Nations are realizing that they are responsible for hundreds of thousands   of new inhabitants in their lan This raises many political, social, and cultural questions about what the these migrants and their new homelands. 
+            
+            The World Affairs Conference has invited Mitzie Hunter and journalist Adrienne Batra to provide their perspectives on the situation. 
             
 		</p>
         <hr>
-        <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/szahid.png" alt="Salma Zahid"/>
-        <h2 class="text-center">Salma Zahid</h2>
-		<p>
-			Salma Zahid is a Pakistani-Canadian politician who is the Liberal MP for the riding of Scarborough Centre, serving as a member of the standing committee on the status of women and the standing committee of immigration. She holds a Masters in Educational Management and Administration from the University of London’s institute of Education, and has received the Queen Elizabeth II Diamond Jubilee Medal for meritorious community service. In May of 2018, she became the first MP to wear a hijab in the House of Commons. She continues to serve as a strong advocate for the rights of immigrants and minorities in the House of Commons.
-		</p>
+        <div class="row">
+            <div class="col">
+                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/mhunter.jpg" alt="Salma Zahid"/>
+                <h2 class="text-center">Mitzie Hunter</h2>
+                <p>
+                    Ms. Hunter has had firsthand experience as to what it is like to be a new inhabitant in an unfamiliar nation. Growing up in Scarborough, she graduated from the University of Toronto with a BA, and completed her MBA at the Rotman School of Management. From there, she has gone on to serve in a variety of significant political and community institutions, such as serving as CEO of the Greater Toronto Civic Action Alliance, CAO of the Toronto Community Housing Corporation, Vice-President with Goodwill Industries, Minister of Advanced Education and Skills Development, Minister of Education, and the Associate Minister of Finance.
+                </p>
+            </div>
+            <div class="col">
+                <img class="img-fluid d-block mx-auto my-2 img-half rounded" src="../img/speakers/abatra.jpg" alt="Salma Zahid"/>
+                <h2 class="text-center">Adrienne Batra</h2>
+                <p>
+                    Adrienne Batra is a well-known Canadian journalist and publicist, who currently serves as the editor-in-chief for the Toronto Sun, one of Canada’s largest newspaper. A prominent figure in national politics and the daughter of Indian-Canadian immigrants, Ms. Batra is well-versed in Canada’s immigration system and the struggles it faces in the 21st century, as well as its role in the national political debate. Through her journalism, she plays an invaluable role in our national political conversation.
+
+                </p>
+            </div>
+        </div>
 		<div class="pb-5">
 		</div>
     </div>
