--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
     </ul>
   </div>
 </nav>
+      <div class="container">
+      <div class="alert alert-info" role="alert">
+        Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+      </div>
+    </div>
 
 
     <!--<div class="container">
@@ -96,7 +101,7 @@
     </div>
     <div class="text-center text-md-right">
       <h4>The Conference is</h4>
-      <h3><span id="countdown"></span></h3>
+      <h3><span id="countdown"></span>Over</h3>
     </div>
   </div>
 </div>
@@ -154,7 +159,7 @@
 </div>
 <script type="text/javascript">
 
-  var wacdate = "2/4/2019"; //Countdown date in MM/DD/YYYY format (no 0's required)
+  /**var wacdate = "2/4/2019"; //Countdown date in MM/DD/YYYY format (no 0's required)
   function getTimeRemaining(endtime){
   	var t = Date.parse(endtime) - Date.parse(new Date());
   	var seconds = Math.floor( (t/1000) % 60 );
@@ -174,7 +179,7 @@
   }
   window.setInterval(function(){
     $("#countdown").html(getTimeRemaining(wacdate));
-  }, 1000);
+  }, 1000);*/
 
 </script>
 
