--- a/schedule/index.html
+++ b/schedule/index.html
@@ -70,11 +70,11 @@
 </nav>
 
 
-    <!--<div class="container">
+    <div class="container">
       <div class="alert alert-info" role="alert">
-        Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+        Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
       </div>
-    </div>-->
+    </div>
 
       <div class="container">
   <div class="card card-body">
