--- a/plenaries/rights.html
+++ b/plenaries/rights.html
@@ -71,6 +71,11 @@
     </ul>
   </div>
 </nav>
+        <div class="container">
+      <div class="alert alert-info" role="alert">
+        Thanks for coming to WAC 2019! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+      </div>
+    </div>
 
 
 		<div class="container">
